--- a/front-end/src/app/results/statistics/statistics.component.scss
+++ b/front-end/src/app/results/statistics/statistics.component.scss
@@ -1,5 +1,6 @@
 @import 'src/styles/layout.scss';
 @import "src/styles/card.scss";
+@import '../../../styles/common.scss';
 
 .flex-list {
     display: flex;
