--- a/front-end/src/app/core/players/player-view/player-view.component.scss
+++ b/front-end/src/app/core/players/player-view/player-view.component.scss
@@ -1,35 +1,4 @@
 @import 'src/styles/card.scss';
 @import 'src/styles/images.scss';
-
-.player{
-    text-align: center;
-}
-
-.input-custom{
-    margin-left: 1em;
-}
-
-.imageAndButton{
-    display: flex;
-}
-.frame{
-    margin-left: 1em;;
-}
-
-#chargerImage {
-    border-radius: 1em;
-}
-
-.label {
-    padding-top: 5%;
-    text-align: center;
-}
-
-.frame-little {
-    margin-left: auto;
-    margin-right: auto;
-    border-style: dashed;
-    border-color:  rgb(243, 58, 144);
-    height: 10%;
-    width: 10%;
-}
+@import '../../../../styles/common.scss';
+@import '../../../../styles/layout.scss';
