--- a/front-end/src/app/core/questions/question-form-modal/question-form-modal.component.html
+++ b/front-end/src/app/core/questions/question-form-modal/question-form-modal.component.html
@@ -5,11 +5,10 @@
 	<br>
 	<ng-template [ngTemplateOutlet] ="displayImage"></ng-template>
     <ng-template [ngTemplateOutlet]="buttonCharging"></ng-template>   
-	<button id="createQuestion" class="button-card" (click)="addOrUpdateQuestion()">Créer</button>
-	<button id="reset" class="button-card" (click) = "reset()">Annuler</button>
+	<button type="submit" id="createQuestion" class="button-card" (click)="addOrUpdateQuestion()">Créer</button>
+	<button type="button" id="reset" class="button-card" (click) = "reset()">Annuler</button>
 	</form>
 </div>
-
 
 <ng-template #buttonCharging>
 	<div class="">
@@ -19,11 +18,15 @@
 	  <app-internet-image-modal [imageTmp] = "imageTmp"></app-internet-image-modal>
 	  <app-database-image-modal [imageTmp] = "imageTmp"></app-database-image-modal>
 	</div>
-  </ng-template>
-  
-  <ng-template #displayImage>
-	<div class="frame image thumb-container-small" *ngIf="imageTmp.url">
-		<button class="delete" (click)="globalService.removeImg(imageTmp)"><i class="fas fa-times"></i></button>
-	  <img class="thumbnail" [src]="globalService.getImgSrc1(imageTmp)" alt="question image">
+</ng-template>
+
+<ng-template #displayImage>  
+	<div class="fixed-container" *ngIf="imageTmp.url">
+		<div class="delete-button" (click)="globalService.removeImg(imageTmp)">	
+			<i class="fas fa-times"></i>
+	  	</div>
+	  	<div class="quiz-card">
+			<img class="frame thumbnail" [src]="globalService.getImgSrc1(imageTmp)" alt="question image">
+		</div>
 	</div>
-  </ng-template>
+</ng-template>
