--- a/front-end/src/app/core/questions/question-view/question-view.component.html
+++ b/front-end/src/app/core/questions/question-view/question-view.component.html
@@ -1,5 +1,5 @@
 <app-header [title] = "headerTitle" [image] = "image"></app-header>
-<div class="goback-button" *ngIf ="!question || question && !invalid()" routerLink= "..">
+<div class="goback-button" *ngIf ="!question || question && !invalid()" (click)= "goBack()">
   <i class="fa fa-arrow-left" aria-hidden="true"></i>
 </div>
 <div class="goback-button" *ngIf ="question && invalid()" (click)="modalService.open(quitWithInvalidQuestion)" routerLink= "..">
@@ -23,7 +23,6 @@
       <button class="delete-button" (click)="deleteAnswer(answer)">
         <i class="fas fa-times"></i>
       </button>
-      <!--<app-answer-view [answer]="answer" [question]="question" [quiz]="quiz"></app-answer-view>-->
       <div class="quiz-card">
         <app-answer-form [quiz] = "quiz" [question] = "question" [answer] = "answer"></app-answer-form>
       </div>
