--- a/front-end/src/app/core/quizzes/quiz-form-modal/quiz-form-modal.component.scss
+++ b/front-end/src/app/core/quizzes/quiz-form-modal/quiz-form-modal.component.scss
@@ -1,6 +1,7 @@
 @import 'src/styles/card.scss';
 @import "src/styles/variables";
 @import 'src/styles/images.scss';
+@import 'src/styles/common.scss';
 
 .quiz-form{
     max-width: 300px;
@@ -10,17 +11,34 @@
     margin-right: auto;
 }
 
-.image {
+.name {
+    font-weight: bold;
+    margin-right: 1em;
+}
+.theme {
+    font-weight: bold;
+    margin-right: 1em;
+}
+
+.delete-button {
+    padding: 0.1rem 0.4rem;
+}
+
+.fixed-container {
     float: right;
-    //width: 30%;//50%
 }
 
-.name{
-    font-weight: bold;
-    margin-right: 1em;
-}
-.theme{
-    font-weight: bold;
-    margin-right: 1em;
+.quiz-card {
+    padding: 0;
+    box-shadow: none;
 }
 
+.quiz-card:hover {
+    cursor: default;
+    background-color: white;
+}
+
+.frame{
+    border: none;
+    margin: 0;
+}
