petits corrs, Angèle fallait aller dodo !

--- a/front-end/src/app/core/questions/question-view/question-view.component.html
+++ b/front-end/src/app/core/questions/question-view/question-view.component.html
@@ -2,7 +2,7 @@
 <div class="goback-button" *ngIf ="!question || question && !invalid()" (click)= "goBack()">
   <i class="fa fa-arrow-left" aria-hidden="true"></i>
 </div>
-<div class="goback-button" *ngIf ="question && invalid()" (click)="modalService.open(quitWithInvalidQuestion)" routerLink= "..">
+<div class="goback-button" *ngIf ="question && invalid()" (click)="modalService.open(quitWithInvalidQuestion)">
   <i class="fa fa-arrow-left" aria-hidden="true"></i>
 </div>
 
