--- a/front-end/src/app/start/password/password.component.html
+++ b/front-end/src/app/start/password/password.component.html
@@ -4,10 +4,10 @@
 </div>
 
 <div class="main">
-<div class = "center">
+<div class = "center horizontal-center">
     <form [formGroup]="loginForm">
-        <input [formControlName]="'password'" type="password" placeholder="Entrez le mot de passe">
-        <button (click) = "loginUser()">Valider</button>
+        <input class = "horizontal-center"[formControlName]="'password'" type="password" placeholder="Entrez le mot de passe">
+        <button class = "big-button" (click) = "loginUser()">Valider</button>
         <div *ngIf="!isCorrect">
             Vous avez entrez une mauvaise valeur ... Veuillez réessayer !
         </div>
