--- a/front-end/src/app/core/quizzes/quiz-view/quiz-view.component.html
+++ b/front-end/src/app/core/quizzes/quiz-view/quiz-view.component.html
@@ -9,6 +9,10 @@
 <div class="img-edit-block">
   <button class="edit-button" id = "editQuizName" (click)="modalService.open(quizEditModal)">Modifier le quiz</button>
 </div>
+<!--
+<div class="img-edit-block">
+  <button class="edit-button" (click)="modalService.open(visiblityModal)">Modifier l'accessiblité du quiz</button>
+</div>--->
 
 <div *ngIf ="quiz">
   <app-question-list [quiz]="quiz"></app-question-list>
