--- a/front-end/src/app/core/quizzes/quiz-view/quiz-view.component.html
+++ b/front-end/src/app/core/quizzes/quiz-view/quiz-view.component.html
@@ -6,13 +6,11 @@
   <i class="fa fa-home" aria-hidden="true"></i>
 </div>
 
-<div class="img-edit-block">
+<div *ngIf ="quiz" class="img-edit-block">
   <button class="edit-button" id = "editQuizName" (click)="modalService.open(quizEditModal)">Modifier le quiz</button>
+  <br>
+  <app-visibility-choice-modal [quiz] = "quiz"></app-visibility-choice-modal>
 </div>
-<!--
-<div class="img-edit-block">
-  <button class="edit-button" (click)="modalService.open(visiblityModal)">Modifier l'accessiblité du quiz</button>
-</div>--->
 
 <div *ngIf ="quiz">
   <app-question-list [quiz]="quiz"></app-question-list>
