--- a/front-end/src/app/core/players/player-view/player-view.component.scss
+++ b/front-end/src/app/core/players/player-view/player-view.component.scss
@@ -1,4 +1,16 @@
 @import 'src/styles/card.scss';
 @import 'src/styles/images.scss';
-@import '../../../../styles/common.scss';
-@import '../../../../styles/layout.scss';
+@import 'src/styles/common.scss';
+@import 'src/styles/layout.scss';
+
+.tag{
+    width: 35%;
+    transform-origin: top;
+    border: dotted rgb(151, 87, 255);
+    color: rgb(255, 81, 0);
+    text-align: center;
+    padding-left: 0.2em;
+    text-decoration: dotted;
+    font-style: italic;
+    font-size: 80%;
+  }
