--- a/front-end/src/app/core/quizzes/quiz-list-player/quiz-list-player.component.html
+++ b/front-end/src/app/core/quizzes/quiz-list-player/quiz-list-player.component.html
@@ -24,7 +24,7 @@
             </div>
         </div>
     </div>
-    <ng-template #noQuizFound let-modal>
+    <ng-template #noQuizFound>
         <div class="center" id="redCenteredMsg"> Aucun quiz trouvé </div>
     </ng-template>
 </div>
